--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,11 @@
+[theme]
+primaryColor = "#f63366"
+# backgroundColor = "#10344b"
+backgroundColor = "#111111"
+# secondaryBackgroundColor = "#154360"
+secondaryBackgroundColor = "#393939"
+textColor = "#fafafa"
+font = "sans serif"
 
+[server]
+enableStaticServing = true
